# cex

./: - Keep and complete YAML frontmatter  - More efficient resource utilization through parallel processing  - Update workflow policies  .aiderignore  .coverage  .cursorrules  .env.example  .gitattributes  .gitignore  .mcp-n01.json  .mcp-n02.json  .mcp-n03.json  .mcp-n04.json  .mcp-n05.json  .mcp-n06.json  .mcp.json  .windsurfrules  CEX_ARCHITECTURE.md  CEX_ARCHITECTURE_MAP.md  CHANGELOG.md  CLAUDE.md  CLAUDE_GENERATED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LICENSE  LLM_PIPELINE.md  QUICKSTART.md  README.md  SECURITY.md  SYNTHESIS.md  TRADEMARK.md  _bench_output_a.md  _bench_output_b.md  _bench_output_c.md  _bench_output_d.md  _bench_output_e.md  _bench_output_f.md  _benchmark_output.md  _tmp_append_atom25.py  (+51 more)
.cex/: auto_cycle_results.json  index.db-journal  kind_deps_patch.json  kind_tool_registry.json  kind_tool_supplement.json  kinds_meta.json  metrics.jsonl  n01_task.md  n02_task.md  n03_task.md  n04_task.md  n05_task.md  n06_task.md  router_config.yaml  score_cache.json  system_test_results.json
.claude/: CEX_COMMAND.md  settings.json  settings.local.json  statusline.sh
.githooks/: pre-commit
.github/: FUNDING.yml  copilot-instructions.md  gitleaks.toml  pull_request_template.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace.json
N00_genesis/: README.md  n00_README.md  n00_nucleus_template.md
N01_intelligence/: LEVERAGE_MAP_V2_VERIFY_CYCLE.md  NUCLEUS.md  README.md  agent_card_n01.md  deck_n01.md
N02_marketing/: NUCLEUS.md  README.md  agent_card_n02.md  deck_n02.md  ex_agent_brand_persona_chat.md  ex_prompt_template_media_kit_copy.md  ex_prompt_template_product_qa.md  ex_prompt_template_q2_blog.md  ex_prompt_template_q2_instagram.md  ex_system_prompt_brand_persona.md  p12_wf_gato_strategic_outreach.md
N03_builder/: README.md  agent_card_n03.md
N03_engineering/: NUCLEUS.md  README.md  agent_card_n03.md  deck_n03.md
N04_knowledge/: LEVERAGE_MAP_V2_n04_verify.md  NUCLEUS.md  README.md  agent_card_n04.md  deck_n04.md  smoke_test_gemini_20260415.md
N05_operations/: LEVERAGE_MAP_V2_n05_verification.md  NUCLEUS.md  README.md  agent_card_n05.md  deck_n05.md
N06_commercial/: NUCLEUS.md  README.md  agent_card_n06.md  deck_n06.md
N07_admin/: NUCLEUS.md  README.md  agent_card_n07.md  deck_n07.md
P01_knowledge/: README.md  _generator.md  _schema.yaml
P02_model/: README.md  _generator.md  _schema.yaml  p02_agent_crm_research_orchestrator.md
P03_prompt/: README.md  _generator.md  _schema.yaml
P04_tools/: README.md  _generator.md  _schema.yaml  ex_api_client_shopify.md  ex_browser_tool_marketplace_scrap.md  ex_integration_guide_bling.md  ex_integration_guide_meli.md  ex_integration_guide_shopify.md  ex_notifier_webhook.md  ex_research_pipeline_marketplace_scrap.md  ex_tts_provider_brand_persona.md  ex_webhook_manager.md  p04_cm_gato3_cex.md  p04_cm_gato3_revenue_strategy.md  p04_retr_multi_source_business_intel.md  p04_search_pet_business_discovery.md
P05_output/: README.md  _generator.md  _schema.yaml  ex_landing_page_admin_dashboard.md  ex_output_validator_publishable_html.md  ex_pricing_page_b2b_generic.md  ex_social_publisher_ayrshare.md  p05_rf_crm_output_standard.md
P06_schema/: README.md  _generator.md  _schema.yaml  ex_input_schema_partner_registration.md  ex_interface_supabase_tables.md  ex_validator_inventory_invariants.md  p06_val_business_contact_quality.md
P07_evals/: README.md  _generator.md  _schema.yaml  p07_sr_geographic_business_density.md
P08_architecture/: README.md  _generator.md  _schema.yaml
P08_diagnostics/: p08_pat_gato3_design_system.md
P09_config/: README.md  _generator.md  _schema.yaml  ex_db_connector_crm.md  p09_ec_template.md
P10_memory/: README.md  _generator.md  _schema.yaml
P11_feedback/: README.md  _generator.md  _schema.yaml  ex_ecommerce_vertical_generic.md  ex_subscription_tier_content.md
P12_orchestration/: README.md  _generator.md  _schema.yaml  ex_dag_content_factory.md  ex_schedule_editorial_calendar.md  ex_workflow_content_factory.md  ex_workflow_inventory_reconcile.md  p12_wf_crm_research_pipeline.md
_config/: README.md  gdrive.yaml
_courses/: README.md
_docs/: 8F_BUILDER_MAP.yaml  8F_RUNNER_PLAN.md  AGENT_PACKAGE_SPEC.md  AGNO_vs_CEX_ANALYSIS.md  ARCHITECTURE.md  ASSIMILATION_PLAN.md  BOOTSTRAP_PROTOCOL.md  CEX_WHITEPAPER.html  CHECKPOINT_SESSION_2026_03_26.md  CHECKPOINT_SESSION_2026_03_28.md  COMPARE_BUILDERS_SPEC.md  COMPILE_REPORT.md  CREW_PATTERNS_RESEARCH.md  CROSS_REPO_ANALYSIS.md  DECK_SYSTEM.md  DOCTOR_PASS_REPORT.md  EXTERNAL_CONTRIBUTORS.md  FAQ.md  FEEDBACK_REPORT.md  GDRIVE_SETUP.md  HIERARCHY.md  HOME.md  INGESTION_PIPELINE.md  INGESTION_PIPELINE_v2.md  ISO_PACKAGE_SPEC.md  KC_LIBRARY_PLAN.md  LLM_INSTRUCTIONS.md  MOTOR_8F_SPEC.md  NAMING_CONVENTION.md  ONBOARDING.md  OVERNIGHT_REPORT.md  PLAN_N03.md  PLAYBOOK.md  QUICKSTART.md  ROADMAP.md  ROADMAP_CONSOLIDATED.md  SCRIPT_CEX_OVERVIEW.md  SELF_BUILD_PROTOCOL.md  TOOL_TEST_RESULTS.md  WHITEPAPER_CEX.md  (+2 more)
_drafts/: kc_blueprint_edison.md  kc_blueprint_gemini.md
_meta/: CODEX.md  COVERAGE_68_TYPES.md  DECISION_MAP.md  DENSITY_REPORT.md  FINAL_REVIEW.md  GLOSSARY.md  GOLDEN_CANDIDATES.md  LP_COMPLETENESS.md  META_TEMPLATE.md  MIGRATION_MAP.md  (+4 more)
(+18228 files in other folders)
